--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,36 +6,45 @@
         xmlns:local="clr-namespace:AzureOpenAIChat"
         mc:Ignorable="d"
         Title="Azure OpenAI Chat" 
-        Height="600" 
+        Height="540" 
         Width="800" 
-        MinHeight="600" 
-        MaxHeight="600" 
+        MinHeight="540" 
         MinWidth="800" 
-        MaxWidth="800" 
         FontSize="14" 
-        ResizeMode="NoResize"
-        WindowStyle="ToolWindow"
-        Loaded="Window_Loaded"
         Closing="Window_Closing">
     <Grid Margin="0,0,0,0">
-        <Grid x:Name="groupedElements" Visibility="Visible">
-            <Label x:Name="label0" Content="API Endpoint:" HorizontalAlignment="Left" Margin="12,10,0,0" VerticalAlignment="Top" Width="112" FontWeight="SemiBold"/>
-            <Label x:Name="label1" Content="API Key:" HorizontalAlignment="Left" Margin="422,10,0,0" VerticalAlignment="Top" Width="86" FontWeight="SemiBold"/>
-            <Label x:Name="label2" Content="Deployment:" HorizontalAlignment="Left"  Margin="12,40,0,0" VerticalAlignment="Top" Width="100" FontWeight="SemiBold"/>
-            <Label x:Name="label3" Content="Temperature:" HorizontalAlignment="Left" Margin="423,39,0,0" VerticalAlignment="Top" Width="109" FontWeight="SemiBold"/>
-            <Label x:Name="label4" Content="Max Tokens:" HorizontalAlignment="Left" Margin="616,40,0,0" VerticalAlignment="Top" Width="101" FontWeight="SemiBold"/>
-            <TextBox x:Name="txtAPIEndPoint" HorizontalAlignment="Left" Margin="112,15,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="300" TabIndex="0"/>
-            <TextBox x:Name="txtAPIKey" HorizontalAlignment="Left" Margin="489,15,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="285" TabIndex="1"/>
-            <TextBox x:Name="txtDeployment" HorizontalAlignment="Left" Margin="112,45,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="300" TabIndex="2"/>
-            <TextBox x:Name="txtTemperature" HorizontalAlignment="Left" Margin="525,44,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="60" TabIndex="3"/>
-            <TextBox x:Name="txtMaxTokens" Margin="700,45,11,0" TextWrapping="NoWrap" VerticalAlignment="Top" TabIndex="4" Width="60"/>
-        </Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        <Grid x:Name="gridcompletion" Visibility="Visible" Margin="10,100,10,220">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80" Name="topRow"/>
+            <RowDefinition Height="*" Name="middleRow"/>
+            <RowDefinition Height="Auto" Name="splitterRow"/>
+            <RowDefinition Height="150" MinHeight="150" Name="bottomRow"/>
+        </Grid.RowDefinitions>
+
+        <Border Background="LightGray" Grid.Row="0" Name="topArea">
+            <Grid x:Name="groupedElements" Visibility="Visible">
+                <Label x:Name="label0" Content="API Endpoint:" HorizontalAlignment="Left" Margin="12,10,0,0" VerticalAlignment="Top" Width="112" FontWeight="SemiBold"/>
+                <Label x:Name="label1" Content="API Key:" HorizontalAlignment="Left" Margin="422,10,0,0" VerticalAlignment="Top" Width="86" FontWeight="SemiBold"/>
+                <Label x:Name="label2" Content="Deployment:" HorizontalAlignment="Left"  Margin="12,40,0,0" VerticalAlignment="Top" Width="100" FontWeight="SemiBold"/>
+                <Label x:Name="label3" Content="Temperature:" HorizontalAlignment="Left" Margin="423,39,0,0" VerticalAlignment="Top" Width="109" FontWeight="SemiBold"/>
+                <Label x:Name="label4" Content="Max Tokens:" HorizontalAlignment="Left" Margin="616,40,0,0" VerticalAlignment="Top" Width="101" FontWeight="SemiBold"/>
+                <TextBox x:Name="txtAPIEndPoint" HorizontalAlignment="Left" Margin="112,15,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="300" TabIndex="0"/>
+                <TextBox x:Name="txtAPIKey" HorizontalAlignment="Left" Margin="489,15,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="285" TabIndex="1"/>
+                <TextBox x:Name="txtDeployment" HorizontalAlignment="Left" Margin="112,45,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="300" TabIndex="2"/>
+                <TextBox x:Name="txtTemperature" HorizontalAlignment="Left" Margin="525,44,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="60" TabIndex="3"/>
+                <TextBox x:Name="txtMaxTokens" HorizontalAlignment="Left" Margin="700,45,11,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="60" TabIndex="4"/>
+            </Grid>
+        </Border>
+
+        <Border Background="LightBlue" Grid.Row="1" Name="middleArea">
+            <Grid x:Name="gridcompletion" Visibility="Visible">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
                 <Label x:Name="lblCompletion" Content="Completion" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="SemiBold" Grid.Row="0"/>
                 <TextBox x:Name="txtCompletion" 
                     IsReadOnly="True"
@@ -48,21 +57,27 @@
                     HorizontalScrollBarVisibility="Auto"
                     TabIndex="8"
                     Grid.Row="1"/>
-        </Grid>
+            </Grid>
+        </Border>
 
-        <Grid x:Name="gridprompt" Visibility="Visible" Margin="10,380,10,10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+        <GridSplitter Grid.Row="2" Height="6" HorizontalAlignment="Stretch"
+                      VerticalAlignment="Top" Background="Black" ResizeBehavior="PreviousAndNext"
+                      ResizeDirection="Rows"/>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="650" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+        <Border Background="LightSlateGray" Grid.Row="3" Name="bottomArea">
+            <Grid x:Name="gridprompt" Visibility="Visible">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-            <Label x:Name="lblPrompt" Content="Prompt" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="SemiBold" Grid.Row="0" Grid.Column="0"/>
-            <TextBox x:Name="txtPrompt" 
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="150" />
+                </Grid.ColumnDefinitions>
+
+                <Label x:Name="lblPrompt" Content="Prompt" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="SemiBold" Grid.Row="0" Grid.Column="0"/>
+                <TextBox x:Name="txtPrompt" 
                     ScrollViewer.VerticalScrollBarVisibility="Auto" 
                     ScrollViewer.HorizontalScrollBarVisibility="Auto" 
                     TextWrapping="Wrap" 
@@ -72,11 +87,13 @@
                     HorizontalScrollBarVisibility="Auto"
                     TabIndex="5"
                     Grid.Row="1"
-                    Grid.Column="0"/>
-            <StackPanel Grid.Row="1" Grid.Column="1">
-                <Button x:Name="btnSend" Content="Send (alt+enter)"  TabIndex="6" IsEnabled="True" IsDefault="True" Click="btnSend_Click" FontWeight="Bold" Grid.Row="1" Grid.Column="1"/>
-                <Button x:Name="btnClearCtx" Content="Clear Context" TabIndex="7" IsEnabled="False" Click="btnClearCtx_Click" Grid.Row="1" Grid.Column="1"/>
-            </StackPanel>
-        </Grid>
+                    Grid.Column="0"
+                    VerticalAlignment="Stretch"></TextBox>
+                <StackPanel Grid.Row="1" Grid.Column="1">
+                    <Button x:Name="btnSend" Content="Send (alt+enter)"  TabIndex="6" IsEnabled="True" IsDefault="True" Click="btnSend_Click" FontWeight="Bold" Grid.Row="1" Grid.Column="1" Height="60"/>
+                    <Button x:Name="btnClearCtx" Content="Clear Context" TabIndex="7" IsEnabled="False" Click="btnClearCtx_Click" Grid.Row="1" Grid.Column="1" Height="60"/>
+                </StackPanel>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
